chore: 改進圖片載入方式

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Webpack Starter</title>
-  <link href="${ require('~/images/favicon.png') }" rel="shortcut icon">
+  <link href="public/favicon.png" rel="shortcut icon">
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta property="og:url" content="">
